--- a/src/Components/MovieListing/MovieListing.css
+++ b/src/Components/MovieListing/MovieListing.css
@@ -1,10 +1,11 @@
 .movie_listing {
     display: flex;
+    width: 100vw;
     flex-direction: column;
     align-items: center;
-    background-color: #111;
-    margin: 20px 20px 40px 40px;
+    background:#111;
     color: #fff6f6;
+    margin-top: 20px;
 }
 
 .movie_listing h1 {
@@ -24,8 +25,8 @@
     padding: 10px;
     display: flex;
     align-items:center;
-    justify-content:space-between;
-    gap: 20px;
+    justify-content:center;
+    gap: 40px;
     margin-bottom: 10px;
 }
 
@@ -72,6 +73,8 @@
 
 .movie_listing_cards {
     display: flex;
+    gap: 20px;
+    margin: 0;
     flex-wrap: wrap; 
     justify-content: center; 
 }
