--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,12 +3,12 @@
     position: sticky;
     top: 0;
     z-index: 2000;
-    width: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: #111;
-    padding: 15px 7%;
+    padding:10px 40px;
     transition: 0.3s;
 }
 
