--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -1,15 +1,14 @@
 .review{
     color: wheat;
+    width: 100vw;
     overflow:scroll;
-    margin: 50px;
     padding: 20px;
     border-radius: 20px;
-    background: #333;
+    background: #111;
     height: 80vh;
     display: flex;
     align-items: center;
     flex-direction: column;
-    border: 2px solid gray;
 }
 .review::-webkit-scrollbar{
     display: none;
